# WinFingerprint

./: .gitignore  .gitmodules  .vc140.props  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  README.md  fingerprintchanger.cpp  fingerprintchanger.h  main.cpp  win_fingerprint.pro
Fingerprints/: fontsfingerptint.cpp  fontsfingerptint.h  hardwarefingerprint.cpp  hardwarefingerprint.h  networkfingerprint.cpp  networkfingerprint.h  telemetryfinregprint.cpp  telemetryfinregprint.h  windowsfingerprint.cpp  windowsfingerprint.h
Interfaces/: idictionary.h
antios_cli/include/antios_cli/: fingerprintchanger.h
antios_cli/src/: CMakeLists.txt  fingerprintchanger.cpp  main.cpp
antios_gui/: antios.pro  antios.qrc  qmldir
antios_gui/include/antios_gui/: application.h  comboboxmodel.h  infotablemodel.h  mainwindow.h  settings.h  types.h  webrtc.h  windowsids.h
antios_gui/src/: CMakeLists.txt  Style.qml  WebRTC.qml  WebRTCForm.ui.qml  Windows_ids.qml  Windows_ids.qmlc  Windows_idsForm.ui.qml  Windows_idsForm.ui.qmlc  application.cpp  comboboxmodel.cpp  infotablemodel.cpp  main.cpp  main.qml  mainwindow.cpp  settings.cpp  webrtc.cpp  windowsids.cpp
antios_lib/: CMakeLists.txt
antios_lib/include/antios_lib/: fontsfingerptint.h  hardwarefingerprint.h  ifingerprint.h  networkfingerprint.h  telemetryfinregprint.h  windowsfingerprint.h
antios_lib/src/: CMakeLists.txt  fontsfingerptint.cpp  hardwarefingerprint.cpp  networkfingerprint.cpp  telemetryfinregprint.cpp  windowsfingerprint.cpp
antios_lib/test/functional_test/: CMakeLists.txt  antios_lib_ftests.cpp
doc/: antios_gui_diagrams.epgz
doc/examples/: Windows10CurrentVersion.reg  Windows81CurrentVersion.reg
prototype/antios/: README.md  antios.pro
prototype/antios/gui/: gui.pro  types.h
prototype/antios/gui-cpp-tests/: gui-cpp-tests.pro
prototype/antios/gui-qml-tests/: tst_qmltests.cpp  tst_tests.qml
prototype/antios/gui/models/: infotablemodel.cpp  infotablemodel.h
prototype/antios/gui/qml/: Settings.qml  SettingsForm.ui.qml
prototype/antios/installer/config/: config.xml  controlscript.js
prototype/antios/reg-file-wrapper/: .gitignore  regfile.cpp  regfile.h
prototype/antios/reg-file-wrapper/plog/: Init.h
prototype/antios/reg-file-wrapper/plog/Appenders/: RollingFileAppender.h
prototype/antios/reg-file-wrapper/tests/: .gitignore
prototype/antios/reg-file-wrapper/utils/: utils.cpp  utils.h  win_errors.h  win_ptrs.h  win_registry_helper.cpp
prototype/antios/win-fingerprint-cpp/: fingerprintchanger.cpp  fingerprintchanger.h  main.cpp  win_fingerprint-cpp.pro
prototype/antios/win-fingerprint-cpp/Fingerprints/: fontsfingerptint.h  hardwarefingerprint.cpp  hardwarefingerprint.h  networkfingerprint.h
prototype/antios/win-fingerprint-cpp/Interfaces/: idictionary.h
prototype/antios/win-fingerprint-cpp/utils/: dictionary.h  types.h  win_errors.h
prototype/winfp/gui/: application.h  main.cpp  qml.qrc
prototype/winfp/gui-cpp-tests/: tst_cpptest.cpp
prototype/winfp/gui-qml-tests/: gui-qml-tests.pro
prototype/winfp/gui/models/: comboboxmodel.cpp
prototype/winfp/gui/qml/: Windows_ids.qml  Windows_idsForm.ui.qml
prototype/winfp/gui/ui/: mainwindow.cpp  mainwindow.h  settings.cpp
prototype/winfp/installer/: .gitignore  README  installer.pro  update.rcc
prototype/winfp/reg-file-wrapper/: main.cpp  reg-file-wrapper.pro
prototype/winfp/reg-file-wrapper/plog/: Log.h  Record.h  Util.h
prototype/winfp/reg-file-wrapper/plog/Appenders/: EventLogAppender.h
prototype/winfp/reg-file-wrapper/plog/Formatters/: TxtFormatter.h
prototype/winfp/reg-file-wrapper/tests/: CMakeLists.txt  main.cpp  tests.pro
prototype/winfp/reg-file-wrapper/utils/: keys.h  types.h  win_registry_helper.h  win_system_information.cpp
prototype/winfp/win-fingerprint-cpp/: README.md  win-fingerprint-cpp.pro
prototype/winfp/win-fingerprint-cpp/Fingerprints/: fontsfingerptint.cpp  networkfingerprint.cpp  telemetryfinregprint.cpp  telemetryfinregprint.h  windowsfingerprint.cpp  windowsfingerprint.h
prototype/winfp/win-fingerprint-cpp/Interfaces/: ifingerprint.h
prototype/winfp/win-fingerprint-cpp/utils/: utils.h  win_system_information.cpp
utils/: dictionary.cpp  dictionary.h  keys.h  types.h  utils.h  win_errors.h  win_registry_helper.cpp  win_registry_helper.h
webrtc/: .gitignore  CMakeLists.txt  WebRTC.pro
webrtc/Ethernet/: Ethernet.pro  ethernettools.cpp  ethernettools.h  main.cpp
webrtc/Ethernet/Base/: ethernettoolsbase.cpp  ethernettoolsbase.h
webrtc/Ethernet/utils/: types.h  utils.h
webrtc/Ethernet/win32/: winethernet.cpp  winethernet.h
webrtc/Firewall/: Firewall.pro  WFP.pro  firewall.cpp  firewall.h  main.cpp
webrtc/Firewall/Base/: firewallbase.h
webrtc/Firewall/utils/: types.h
webrtc/Firewall/win32/: wfp.cpp  wfp.h
webrtc/Pinger/: Pinger.pro  main.cpp  pinger.cpp  pinger.h
webrtc/Pinger/Base/: pingerbase.h
webrtc/Pinger/win32/: winpinger.cpp  winpinger.h
webrtc/Resolver/: Resolver.pro
webrtc/Resolver/include/resolver/: resolver.h  resolverbase.h  winresolver.h
webrtc/Resolver/src/: main.cpp  resolver.cpp  winresolver.cpp
winapi_helpers/include/winapi_helpers/: utilities.h
winapi_helpers/test/functional_test/: CMakeLists.txt
winfp/include/winfp/: fingerprint_data_base.h  fingerprint_data_interface.h  windows_fingerprint.h  windows_fpdata.h  winfp_data.h
winfp/src/: CMakeLists.txt  fingerprint_data_base.cpp  windows_fingerprint.cpp  windows_fpdata.cpp  winfp_data.cpp
winfp_gui/: antios.qrc
winfp_gui/include/antios_gui/: application.h  infotablemodel.h  mainwindow.h  settings.h  windowsids.h
winfp_gui/src/: Windows_idsForm.ui.qml  infotablemodel.cpp  settings.cpp
